--- a/papers/GdMn2O5/bib.bib
+++ b/papers/GdMn2O5/bib.bib
@@ -2110,3 +2110,31 @@ volume = {572},
 year = {2014}
 }
 
+@article{Zheng2019,
+abstract = {Magnetically induced ferroelectric polarization in rare-earth RMn2O5 manganites is believed to originate from the symmetric exchange striction associated with a specific antiferromagnetic phase in the low temperature (T) region and would be irrelevant with electropoling in the high-T paramagnetic-paraelectric phase region. In this work, we demonstrate that low-T pyroelectric polarization of GdMn2O5 single crystals along the b axis in the antiferromagnetic phase exhibits remarkable dependence on the electropoling history imposed in the high-T paramagnetic-paraelectric phase. In particular, the high-T electropoling results in a reversal of ferroelectric polarization in the low-T region, which can be flopped back by the electropoling being sustained in the low-T ferroelectric region. The existence of an electrically polarizable magnetic cluster state in the high-T paramagnetic-paraelectric region is proposed based on a combination of experimental observations and first-principles calculations. An intrinsic correlation between the low-T antiferromagnetic ordering and the high-T polarizable state is discussed. The present experiments unveil the emergent phenomena on multiferroicity of RMn2O5 and suggest an alternative scenario for electrocontrol of magnetism.},
+author = {Zheng, S. H. and Gong, J. J. and Li, Y. Q. and Li, C. F. and Tang, Y. S. and Zhang, J. H. and Lin, L. and Yan, Z. B. and Jiang, X. P. and Cheong, S. W. and Liu, J. M.},
+doi = {10.1063/1.5120971},
+file = {:home/ponet/Documents/Mendeley Desktop/1.5120971.pdf:pdf},
+issn = {10897550},
+journal = {J. Appl. Phys.},
+number = {17},
+title = {{Abnormal dependence of multiferroicity on high-temperature electro-poling in GdMn2O5}},
+volume = {126},
+year = {2019}
+}
+
+@article{Choi2008,
+abstract = {We report discovery of collinear-magnetism-driven ferroelectricity in the Ising chain magnet Ca3Co2-xMnxO6 (x 0.96). Neutron diffraction shows that Co2+ and Mn4+ ions alternating along the chains exhibit an up-up-down-down († †) magnetic order. The ferroelectricity results from the inversion symmetry breaking in the († †) spin chain with an alternating charge order. Unlike in spiral magnetoelectrics where antisymmetric exchange coupling is active, the symmetry breaking in Ca3(Co,Mn)2O6 occurs through exchange striction associated with symmetric superexchange. {\textcopyright} 2008 The American Physical Society.},
+author = {Choi, Y. J. and Yi, H. T. and Lee, S. and Huang, Q. and Kiryukhin, V. and Cheong, S. W.},
+doi = {10.1103/PhysRevLett.100.047601},
+file = {:home/ponet/Documents/Mendeley Desktop/PhysRevLett.100.047601.pdf:pdf},
+issn = {00319007},
+journal = {Phys. Rev. Lett.},
+number = {4},
+pages = {6--9},
+title = {{Ferroelectricity in an ising chain magnet}},
+volume = {100},
+year = {2008}
+}
+
+
