--- a/papers/GdMn2O5/bib.bib
+++ b/papers/GdMn2O5/bib.bib
@@ -2137,4 +2137,23 @@ volume = {100},
 year = {2008}
 }
 
+@article{Wang2009,
+abstract = {Multiferroics, defined for those multifunctional materials in which two or more kinds of fundamental ferroicities coexist, have become one of the hottest topics of condensed matter physics and materials science in recent years. The coexistence of several order parameters in multiferroics brings out novel physical phenomena and offers possibilities for new device functions. The revival of research activities on multiferroics is evidenced by some novel discoveries and concepts, both experimentally and theoretically. In this review article, we outline some of the progressive milestones in this stimulating field, specially for those single phase multiferroics where magnetism and ferroelectricity coexist. Firstly, we will highlight the physical concepts of multiferroicity and the current challenges to integrate the magnetism and ferroelectricity into a single-phase system. Subsequently, we will summarize various strategies used to combine the two types of orders. Special attentions to three novel mechanisms for multiferroicity generation: (1) the ferroelectricity induced by the spin orders such as spiral and E-phase antiferromagnetic spin orders, which break the spatial inversion symmetry, (2) the ferroelectricity originating from the charge ordered states, and (3) the ferrotoroidic system, will be paid. Then, we will address the elementary excitations such as electromagnons, and application potentials of multiferroics. Finally, open questions and opportunities will be prospected.},
+archivePrefix = {arXiv},
+arxivId = {0908.0662},
+author = {Wang, K. F. and Liu, J. M. and Ren, Z. F.},
+doi = {10.1080/00018730902920554},
+eprint = {0908.0662},
+file = {:home/ponet/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Wang, Liu, Ren - 2009 - Multiferroicity The coupling between magnetic and polarization orders(2).pdf:pdf},
+isbn = {0001-8732},
+issn = {00018732},
+journal = {Advances in Physics},
+keywords = {Charge-ordered state,Electromagnon,Ferroelectricity,Helical spin-ordered state,Magnetism,Magnetization,Magnetoelectric coupling,Multiferroicity,Multiferroics,Polarization,Spatial-inversion symmetry breaking,Time-reversion symmetry breaking},
+mendeley-groups = {PhD/Multiferroics},
+number = {4},
+pages = {321--448},
+title = {{Multiferroicity: The coupling between magnetic and polarization orders}},
+volume = {58},
+year = {2009}
+}
 
