--- a/papers/GdMn2O5/GdMn2O5.tex
+++ b/papers/GdMn2O5/GdMn2O5.tex
@@ -1,12 +1,35 @@
 \chapter{Topological Multiferroic switching; coupling between Magnetism and Ferroelectricity in GdMn2O5}
 \section{Introduction}
-Efficient control of robust order has historically been one of the main technological drivers for research in condensed matter.
-The magnetoelectric effect, i.e. the electric control of magnetic order or vice versa, is an obvious mechanism that could be exploited to achieve this control\cite{Spaldin2019,Khomskii2009,Fiebig2005,Fiebig2016,Cheong2007}.
-However, the underlying physics are not particularly well understood and candidate materials are not plentiful.
-One class of materials that has attracted much attention in recent years are the multiferroics, materials where multiple orders coexist, more specifically in this case: magnetic and ferroelectric order.
-
-Here we specifically investigate GdMn$_2$O$_5$, an example of a type-II multiferroic\cite{Khomskii2009} with ferroelectricity arising due to a magnetic ordering that breaks inversion symmetry. In contrast to type-I multiferroics, the ferroelectricity and magnetic order arise from the same underlying physics, rather than from two different `subsystems` in the same material. This leads to an enhanced coupling between the two orders allowing for excellent cross order control (in the present case we investigate the control over the ferroelectric polarization by an external magnetic field).
-Gd$^{3+}$ is special with respect to the other possible rare earths in the orthorhombic magnanites $R$Mn$_2$O$_5$, with $R$ being one of the rare earths, because it has a very isotropic electronic configuration (4$f^7$), i.e. there is no unquenched OAM. This means that the large spin (nominally $S=7/2$) can orient itself relatively freely to optimize the magnetic interactions with its neighboring Mn atoms.
+\lp{words to sprinkle around: coexist, attracted much attention}
+Efficient control and probing of robust order has historically been one of the main technological drivers for research in condensed matter.
+The hallmark example is the impact that the discovery of Giant Magnetoresistance has had on the efficiency of hard disks.
+By alternating the information storing (usually) ferromagnetic domains with nonmagnetic metallic domains, the ability to purely electrically read back information that was previously written was unlocked, leading to a great increase in the reading efficiency.
+This effect is based on the depence of the electrical conductivity of ferromagnetic metals on the spin orientation of the current carriers, a beautiful example of the technological promises that the field of spintronics holds.
+There remains, however, the issue of writing the information in the first place.
+In current state of the art storage technologies from the point of view of density, this is still done by applying an external magnetic field to reorient the ferromagnetic domains. One can imagine this to be quite an inefficient process, both from the point of view of granularity (stray fields and non-locality of the magnetic fields limit the minimum size of the domains) as from that of energetics.
+This conundrum drives much of the current research in the field of spintronics, with promising applications like spin-transfer torque devices, utilizing the torque applied by spin-polarized current carriers on the magnetic moments inside the storage medium.
+It is thus clear that the longevity of magnetism based order, combined with the easy of manipulation associated with charge based order is highly desirable.
+This leads us to the topic of this chapter, namely the magnetoelectric effect in multiferroic materials.
+As the name implies, the magnetoelectric effect allows for the electric control of magnetic order or the magnetic control of ferroelectric polarization\cite{Spaldin2019,Khomskii2009,Fiebig2005,Fiebig2016,Cheong2007}.
+In practice, however, there are some issues that limit the effectiveness of this cross-order coupling, and the number of multiferroic materials is limited.
+This latter point can be already understood from a symmetry point of view.
+Namely, ferroelectric materials break inversion symmetry, whereas magnetic order needs the breaking of time reversal symmetry.
+This leads to only 13 Shubnikov magnetic point groups that allow simultaneous appearance of ferroelectricity and magnetization\cite{Wang2009}. Moreover, it is now well-known that not all compounds that belong to one of those 13 groups showcase multiferroicity.
+Another reason for the relative sparseness of multiferroic materials is that generally speaking ferroelectricity and magnetism are not compatible on the ionic level.
+For example, in perovskites (ABO$_3$, A cation, B anion), there are many ferroelectric oxides and magnetic oxides, but there are almost no materials belonging to this class that harbor both orders.
+In this case, the reason is that, in general, a prerequisite for ferroelectricity is a B-site configuration of $d^0$, i.e. an empty $d$-shell.
+Conversely, magnetism requires partially filled $d$ or $f$ shells, such that the unpaired electrons lead to nonzero magnetic moments on the B-site anions.
+It is clear that these two requirements are impossible to satisfy simultaneously and this is one of the major reason why multiferroics are not commonplace \lp{there is also the issue of hybridization where empty shells lead to occupation of bonding orbitals and half-filled orbitals engaging in anti-bonding hybridization never stabilizing the ionic shift, not sure if I should also discuss that}.
+There are two ways around these issues, which lead to so-called Type-I and Type-II multiferroics\cite{Khomskii2009}.
+Multiferroic materials of the Type-I variety harbor two different `subsystems` that separately handle either the magnetic or ferroelectric order.
+Referring back to the perovskites discussed above, one could, for example, imagine a ferroelectrically active A-site cation such as Bi$^{3+}$ or Pb$^{3+}$, combined with a magnetically active B-site anion such as Fe\cite{Wang2009}.
+This strategy gets around the issue of the mutual exclusivity of ferroelectricity and magnetization on the atomic level, and can lead to large magnitude of both orders \lp{specifics?}, but also tends to lead to small magnetoelectric effects due to the different origins of the two orders. 
+Ideally, one uses the other variety, i.e. Type-II multiferroic materials, where the magnetic and ferroelectric order originate from the same mechanism.
+The usual situation in these Type-II materials is that one order stabilizes, lowering the symmetry of the material and thus allowing for the other to also appear.
+Key examples are inversion breaking magnetic configurations that lead to ferroelectricity, as is also the situation at hand \lp{add more examples, show the symmetry considerations discussed in wang for spin-spirals?}.
+Although it is clear that the size of the secondary order thus created is usually orders of magnitude smaller than in Type-I materials, their common origin leads to very sizable magnetoelectric effects.
+Here we specifically investigate GdMn$_2$O$_5$, an example of a type-II multiferroic\cite{Khomskii2009}, where ,as will be shown below, the ferroelectric polarization can be controlled to a high degree by the application of an external magnetic field.
+Gd$^{3+}$ is special with respect to the other possible rare-earths in the orthorhombic magnanites $R$Mn$_2$O$_5$ ($R$ being one of the rare-earths), because it has a very isotropic electronic configuration (4$f^7$), i.e. there is no unquenched OAM. This means that the large spin (nominally $S=7/2$) can orient itself relatively freely to optimize the magnetic interactions with its neighboring Mn atoms.
 This turns out to be one of the main reasons behind the very large electric polarization and magnetoelectric coupling, compared to other multiferroics, and even to other $R$Mn$_2$O$_5$ compounds.
 
 The orthorhombic manganites have a very complex crystalline structure, which leads to a wealth of different phases depending on the temperature, magnetic field and even electric-field poling history \cite{Zheng2019}.
@@ -26,45 +49,46 @@ As will be shown below, these three regimes can each be assigned a topological n
 
 \begin{figure}
 	\IncludeGraphics{unit_cell}
-	\caption{\label{fig:GdMn2O5_unit_cell}}
+	\caption{\label{fig:GdMn2O5_unit_cell}{\bf Magnetic unit cell of GdMn$_2$O$_5$.} The spheres signify Mn (purple), Gd (green) and Oxygen (red) ions. The zig-zag chains along the $a$-direction (cyan lines) show which Mn ions are linked with strong AFM exchange, resulting in the $\mathbf{L}_1$ and $\mathbf{L}_2$ N\'eel vectors. The boundary of the structural unit cell is marked by the black box. Finally, the yellow arrows denote the exchange paths between Gd and neighboring Mn ions in both chains, corresponding to $v_1$ and $v_2$.}
 \end{figure}
 
 \section{Modeling}
 In order to describe the physics at play we use a quasi-classical model Hamiltonian with eight Gd spins designated by unit vectors $\mathbf{S}_i, i=1..8$, two AFM order parameters $\mathbf{L}_\alpha, \alpha=1,2$ (also unit vectors), one for each Mn chain, and the slave order parameter $P_b$ for the polarization, see Fig~\ref{fig:GdMn2O5_unit_cell}.
 Using one AFM order parameter for each Mn chain amounts to taking the rigid spin approximation, a simplification that is justified by the large intrachain AFM exchanges, compared with the relatively small exchanges between the two chains.
-Another simplification that is adopted is to keep all spins in the $ab$-plane, since this was experimentally shown to be the case, and the layers couple ferromagnetically along the crystalline $c$-direction\cite{Lee13}. We moreover adapt unit length vectors for all Gd spins and $\mathbf{L}_{1,2}$, such that their size is included in the model parameters. This limits the degrees of freedom to one angle per Gd spin and Mn chain, greatly simplifying the numerical solution.
+Another simplification that is adopted is to keep all spins in the $ab$-plane, since this was experimentally shown to be the case, and the layers couple ferromagnetically along the crystalline $c$-direction\cite{Lee13}. Since all spins and AFM order parameters are unit vectors, their sizes are implicitely included in the model parameters.
+This limits the degrees of freedom to one angle per Gd spin and Mn chain, greatly simplifying the numerical solution.
 The use of unit vectors means that the magnitude of the spins is included in the model parameters.
 
 The next step in deriving the appropriate model Hamiltonian using these simplifications and order parameters is to find symmetrically allowed combinations of them, since we know that the Hamiltonian needs to transform according to the unit representation of the symmetry group of the crystal.
-To this end we use the symmetry operations from the paramagnetic high symmetry $Pbam$ phase, including time reversal symmetry, which has the following symmetry operations:
+To this end we utilize the following symmetry operations of the paramagnetic high symmetry $Pbam$ phase:
 \begin{align}
 	I &: (x, y) \rightarrow (-x, -y)\\
 	2z &: (x, y) \rightarrow (-x, -y)\\
 	2y &: (x, y) \rightarrow (\frac{1}{2} - x, \frac{1}{2} + y)
 \end{align}
-$I$ and $2z$ are in the 2D case the same symmetry operations. Next, a doubling of the unit cell is necessary to fit the overall AFM magnetic state. This leads to additional symmetry operations when the spins are not taken into account, which in light of brevity we won't enumerate here. For our purposes it suffices to write $2y: (x, y) \rightarrow (\frac{1}{4} - x, \frac{1}{2}+y)$ and add an additional symmetry operation $a: (x, y) \rightarrow (x + a, y)$.
-In effect, applying these symmetry operations to the degrees of freedom inside the first magnetic unit cell, we can find all the allowed terms in the Hamiltonian, bearing in mind the AFM spin transformation between the two halves of the magnetic unit cell.
-In doing so we utilize the following table of transformations:
-\begin{table}[]
+$I$ and $2z$ are in the 2D case the same symmetry operations. Next, a doubling of the unit cell is necessary to fit the overall AFM magnetic state. This leads to additional symmetry operations when the spins are not taken into account, which in light of brevity we won't fully enumerate here. For our purposes it suffices to write $2y: (x, y) \rightarrow (\frac{1}{4} - x, \frac{1}{2}+y)$ and add an additional symmetry operation $a: (x, y) \rightarrow (x + a, y)$.
+In effect, applying these symmetry operations to the degrees of freedom, bearing in mind the AFM spin transformation between the two halves of the magnetic unit cell, leads to the following transformation table:
+\begin{table}[h]
 \begin{tabular}{|l|lllllllllll|}
 \cline{1-12}
  & $S_1$ & $S_2$ & $S_3$ & $S_4$ & $S_5$ & $S_6$ & $S_7$ & $S_8$ & $L_1$ & $L_2$ & $P_b$ \\ \cline{1-12}
 I & $S_8$ & $S_7$ & $S_6$ & $S_5$ & $S_4$ & $S_3$ & $S_2$ & $S_1$ & -$L_1$ & $L_2$ & -$P_b$ \\ \cline{1-12}
 2y & $S_4$ & $S_3$ & $S_2$ & $S_1$ & $S_8$ & $S_7$ & $S_6$ & $S_5$ & $L_1$ & $L_2$ & $P_b$ \\ \cline{1-12}
 a & $S_5$ & $S_6$ & $S_7$ & $S_8$ & $S_1$ & $S_2$ & $S_3$ & $S_4$ & -$L_1$ & -$L_2$ & $P_b$ \\ \cline{1-12}
-\end{tabular}\\\\
-\end{table}
-The first set of terms that couple $L_\alpha$ to the spins can be found by taking into account time reversal symmetry, which only allows even combinations of spin and AFM order parameters, and assuming that each Gd spin has two different exchanges $v_1$ and $v_2$ towards the two chains in the unit cell, the former towards the one with the closest Mn ion, the latter towards the chain with the further Mn ion. Starting from terms with example $S_1$ and $S_2$, bearing in mind the above table, we can find the sets of terms:
+\end{tabular}
+\end{table}\\\\
+The first set of terms, denoting the magnetic exchanges that couple $L_\alpha$ to the spins, can be found by taking into account time reversal symmetry, which only allows even combinations of spin and AFM order parameters, and assuming that each Gd spin has two different exchanges $v_1$ and $v_2$ towards the two chains in the unit cell. The former denotes the exchange towards the chain with the closest Mn ion, the latter towards the other chain.
+Starting from terms with $S_1$ and $S_2$, taking into account the above table of transformations, the following sets of terms can be identified:
 \begin{align}
 	\mathbf{S}_1\cdot(v_1 \mathbf{L}_2 + v_2 \mathbf{L}_1) \xrightarrow{I} \mathbf{S_8}\cdot(v_1 \mathbf{L}_2 - v_2 \mathbf{L}_1) \xrightarrow{a} \mathbf{S_4} \cdot (- v_1 \mathbf{L}_2 + v_2 \mathbf{L}_1) \xrightarrow{I} \mathbf{S_5} \cdot (-v_1 \mathbf{L}_2 - v_2 \mathbf{L}_1) \nonumber\\
 	\mathbf{S}_2\cdot(v_1 \mathbf{L}_1 + v_2 \mathbf{L}_2) \xrightarrow{I} \mathbf{S_7}\cdot(-v_1 \mathbf{L}_1 + v_2 \mathbf{L}_2) \xrightarrow{a} \mathbf{S_3} \cdot (v_1 \mathbf{L}_1 - v_2 \mathbf{L}_2) \xrightarrow{I} \mathbf{S_6} \cdot (-v_1 \mathbf{L}_1 - v_2 \mathbf{L}_2) 
 \end{align}
-The sum of all these contributions has the correct unit representation leading to the first term in the Hamiltonian:
+The sum of all these contributions has the correct unit representation leading to the first contribution to the Hamiltonian:
 \begin{align}
     H_{LS} =& \mathbf{S}_1 \cdot (v_1 \mathbf{L}_2 + v_2 \mathbf{L}_1) + \mathbf{S}_2 \cdot (v_1 \mathbf{L}_1 + v_2 \mathbf{L}_2) + \mathbf{S}_3 \cdot (v_1 \mathbf{L}_1 - v_2 \mathbf{L}_2) + \mathbf{S}_4 \cdot (-v_1 \mathbf{L}_2 + v_2 \mathbf{L}_1) \nonumber\\
     -&\mathbf{S}_5 \cdot (v_1 \mathbf{L}_2 + v_2 \mathbf{L}_1) - \mathbf{S}_6 \cdot (v_1 \mathbf{L}_1 + v_2 \mathbf{L}_2) - \mathbf{S}_7 \cdot (v_1 \mathbf{L}_1 - v_2 \mathbf{L}_2) - \mathbf{S}_8 \cdot (-v_1 \mathbf{L}_2 + v_2 \mathbf{L}_1)
 \end{align}
-Since $P_b$ is already a scalar, a similar process can be applied starting from $P_b \, \mathbf{S_1}\cdot(\beta_2 \mathbf{L}_1 + \beta_3 \mathbf{L}_2)$ and $P_b\, \mathbf{S_2}\cdot(\beta_2 \mathbf{L}_1 + \beta_3 \mathbf{L}_2)$, which are signify the magnetostriction part of the Hamiltonian. This leads to
+Since $P_b$ is already a scalar, a similar process can be applied starting from $P_b \, \mathbf{S_1}\cdot(\beta_2 \mathbf{L}_1 + \beta_3 \mathbf{L}_2)$ and $P_b\, \mathbf{S_2}\cdot(\beta_2 \mathbf{L}_1 + \beta_3 \mathbf{L}_2)$, which signify the symmetric Heisenberg magnetostriction contribution to the Hamiltonian. This leads to
 \begin{align}
 	H_{P_b}=&-P_b[E_b + \beta_1 (\mathbf{L}_1\cdot \mathbf{L}_2)+
     (\mathbf{S}_1-\mathbf{S}_5)(\beta_2 \mathbf{L}_2 + \beta_3 \mathbf{L}_1) +
@@ -76,7 +100,7 @@ where the dipole term from a possible external electric field $P_b E_b$ was also
 A further three terms in the Hamiltonian depend solely on $L_1$ and $L_2$:
 \begin{equation}
 	H_L = \Gamma(\mathbf{L}_1\cdot \mathbf{L}_2)^2
-    -\sum_{\alpha}\chi^{-1}((\mathbf{H}\cdot \mathbf{L}_\alpha)^2-H^2)
+    +\sum_{\alpha}\chi^{-1}((\mathbf{H}\cdot \mathbf{L}_\alpha)^2-H^2)
     -K_L\sum_\alpha(\mathbf{L}_\alpha\cdot \mathbf{n}_\alpha)^2\label{eq:GdMn2O5_hami_1}
 \end{equation}
 The first originates from the gain in exchange energy through spin canting when the chains are not colinear, due to the competition of interchain exchange $J_\perp$ and the intrachain AFM exchange $J_\|$ \cite{Sushkov2008}, with $\Gamma\sim\frac{J_{\perp}^2}{J_\|}>0$. The term with $\chi$ represents the gained Zeeman energy when the Mn spins are slightly canted from the purely AFM order inside the chains, resulting in a weak magnetic moment which couples the the external field. The last denotes the easy-axis anisotropy which is aligned unit vectors chosen to be aligned with the threefold axes of the pyramidally coordinated Mn ions, i.e. $n_\alpha=\pm23.4^\circ$ respectively.
@@ -85,41 +109,72 @@ Similarly, three terms can be identified as coming purely from the Gd spins:
 \begin{equation}
      H_S=\frac{1}{2}(g \mu_B)^2\sum_{i\neq j}\left(\frac{\mathbf{S}_i\cdot \mathbf{S}_j}{r_{ij}^3}-3\frac{(\mathbf{S}_i\cdot \mathbf{r}_{ij})(\mathbf{S}_j\cdot \mathbf{r}_{ij})}{r_{ij}^5}\right) - \sum_i\left( K_S(\mathbf{N}_i\cdot \mathbf{S}_i)^2 + g\mu_\mathrm{B} \mathbf{H} \cdot \mathbf{S}_i\right) 
 \end{equation}
-The first describes the magnetodipolar interaction between Gd spins, which could be relatively large due to the size of the spins and relative proximity to the neighbors. In the numerical simulations these were restricted to five nearest neighbors, including periodic images. Including more did not lead to qualitative differences of the results. Again an anisotropy term is included, this time with anisotropy axes $N_i$ unit vectors alternating as $\pm 12^\circ$. $K_S$ is significantly smaller due to the isotropic environment and spin configuration of the Gd ions.
+The first describes the magnetodipolar interaction between Gd spins, which could be relatively large due to the size of the spins and relative proximity to the neighbors. In the numerical simulations these were restricted to five nearest neighbors, including periodic images. Including more did not lead to qualitative differences of the results. Again an anisotropy term is included, this time with anisotropy axes $N_i$, unit vectors alternating as $\pm 12^\circ$. $K_S$ is significantly smaller than $K_L$ due to the isotropic environment and spin configuration of the Gd ions.
 The final term denotes the Zeeman energy from the interaction with the externally applied magnetic field.
-The model parameters used here are $J_\perp = 1.89$~meV, $J_\parallel = 26.67$~meV, $K_L = 5.27$~meV, $K_S = 0.2$~meV, $v_1 = 3.33$~meV, $v_2 = 0.15$~meV. 
-with the model parameters used to fit the experimental data, $\alpha = 0.06\:\mu$C/cm$^2$, $\beta = 0.04\:\mu$C/cm$^2$, $\gamma = 0.06\:\mu$C/cm$^2$. The results are shown in Fig.~\ref{fig:theory_Gd1}
+
+The model parameters used here are $J_\perp = 1.89$~meV, $J_\parallel = 26.67$~meV, $K_L = 5.27$~meV, $K_S = 0.2$~meV, $v_1 = 3.33$~meV, $v_2 = 0.15$~meV \lp{check order parameters, maybe show different sets?}. 
+with the model parameters used to fit the experimental data, $\alpha = 0.06\:\mu$C/cm$^2$, $\beta = 0.04\:\mu$C/cm$^2$, $\gamma = 0.06\:\mu$C/cm$^2$.
+
+The low temperature commensurate state breaks both time reversal symmetry, $T: (\mathbf{L}_1, \mathbf{L}_2) \rightarrow (-\mathbf{L}_1, -\mathbf{L}_2)$, and inversion symmetry $I:(\mathbf{L}_1, \mathbf{L}_2) \rightarrow (-\mathbf{L}_1, \mathbf{L}_2)$, leading to a fourfold degenerate energy surface as shown in Fig.~\ref{fig:GdMn2O5_heatmap1}. 
+To simulate the experimental measurements in Fig.~\ref{fig:GdMn2O5_experiment} at low temperature, we choose one of the four degenerate minima of the Hamiltonian, gradually increase and decrease the applied magnetic field, and minimize the energy in order to track the instantaneous local minimum. 
+
+The results are shown in Fig.~\ref{fig:GdMn2O5_theory}
+\begin{figure*}[t]
+    \centering
+    \IncludeGraphics[width=\linewidth]{0field_heatmap.png}
+\end{figure*}
 
 \begin{figure*}[t]
     \centering
-    \IncludeGraphics[width=\linewidth]{fig_theory.png}
+    \IncludeGraphics[width=\linewidth]{fig_theory}
     %\includegraphics[width=\linewidth]{fig/L1L2_heatmap.png}
-    \caption{\label{fig:GdMn2O5_theory} (a-c) Evolution of electric polarization $P_b$ during the magnetic field sweep cycle for various magnetic field orientations. The four states are marked by the numbers, and the switching paths indicated by insets and arrows next to the graphs. The colors are used to indicate sequential sweep branches. $\nu$ signifies the winding number of each switching regime.
-    (d-f) Trajectories (in yellow) of the AFM order parameter orientations $(\phi_{L_1},\phi_{L_2})$ through the field sweep cycles in different regimes. The color map shows the energy landscape at an intermediate field inside the hysteresis region. 
-    (g) NEB showing the evolution of transition barriers between states 1,2,3,4 as the magnetic field aligned with with magic angle is swept through the hysteresis region. The plots are shifted vertically for clarity. The curve colors encode the corresponding magnetic field strength. The trajectory of the energy minimum due to field sweeps is shown with blue balls and arrows.
-    Coordinated changes of the state energies and barrier asymmetry with magnetic field enable the topological behavior. 
-    (h) Spin configurations of the four states, labeled $1\dots 4$ in (a).
-    (k) Schematic evolution of the barriers connecting the state 2 to states 1 and 3 away from $H^*$. Saddle point states are denoted by $\tilde{1}$ and $\tilde{3}$.
-    }
+    \caption{\label{fig:GdMn2O5_theory}{\bf Simulation of magnetoelectric behaviour.}
+    (a-c) Evolution of electric polarization $P_b$ during the magnetic field sweep cycle for various magnetic field orientations. 
+   In each panel, the changes of the curve color indicate the same progression of the sweep cycle as Fig 2. The four-state switching is seen for the field at the magic orientation. 
+    The insets indicate the corresponding switching paths and winding numbers.
+    (d-f) Trajectories (in green) in the space of the N\'eel vectors orientations, $(\phi_{\rm L_1},\phi_{\rm L_2})$, through the field sweep cycles in different regimes. The color map shows the energy landscape in the vicinity of the switching fields. 
+    (g) Evolution of transition barriers between states 1,2,3,4 as the magnetic field at 10$^\circ$ to the $a$ axis is swept through the hysteresis region. The plots are shifted vertically, and magnetodipolar interactions were enhanced by a factor of 5.3 for clarity. The curve colors encode the corresponding magnetic field strength. The trajectory of the energy minimum due to field sweeps is shown with blue circles and arrows.
+    Coordinated changes of the state energies and barrier asymmetry with magnetic field enable the topological behavior.
+    (h) Spin configurations in states 1, 2, 3 and 4.
+    (k) Schematic evolution of the barriers connecting the state 2 to states 1 and 3 in the vicinity of $H^*$. Saddle point states are denoted by $12$ and $23$.}
 \end{figure*}
 
-We proceed by identifying the 2 low and 2 high $P_b$ states in Fig.~\ref{fig:theory_Gd1}(b) as 1,3 and 2,4 respectively. The magnetic configuration of these states is displayed in panel (h) of the same figure. We then perform a nudged elastic band calculation between these states at different magnetic field strengths while remaining in the 4-state hysteresis region, resulting in the evolution of barriers between these states as shown in panel (g), where the color coding is used to denote the magnetic field strength, and the energy graphs are offset for clarity. The arrows and blue balls denote the evolution during the double magnetic field sweep. As expected, there are two degenerate minima at each value of $H$, at low field these are located at states 1 and 3, then as the field is ramped up they move to favor states 2 and 4. We see that during the sweep the barriers between the different states evolve asymmetrically. As we start in state 1, when the field is ramped up first the barrier towards state 2 decreases faster than the one towards state 4, causing the system to move from 1 to 2. Then as the magnetic field is lowered, the barrier from 2 to 3 increases slower than from 2 to 1. When ultimately state 2 goes from being metastable to a saddle point, the state spills towards state 3, and so on.
-In order to try and understand where the asymmetric evolution of the barriers comes from, we look at the particular $H$-field strength where the barriers between state 2 and 1, and 2 and 3 are the same height. This is highlighted by the red dashed box around the blue graph. The inset of panel (k) provides a zoom on this situation. The states on top of the barriers are denoted by a tilde over the state towards the barrier is oriented, i.e. $\tilde{1}$ signifies the state on the top of the barrier from state 2 towards state 1. We then perform a Taylor expansion in terms of $H$, around $H^*$:
+We proceed by identifying the 2 low and 2 high $P_b$ states in Fig.~\ref{fig:GdMn2O5_theory}(b) as 1,3 and 2,4 respectively.
+The magnetic configuration of these states is displayed in panel (h) of the same figure.
+We then perform a nudged elastic band calculation between these states at different magnetic field strengths while remaining in the 4-state hysteresis region, resulting in the evolution of barriers between these states as shown in panel (g), where the color coding is used to denote the magnetic field strength, and the energy graphs are offset for clarity.
+The arrows and blue balls denote the evolution during the double magnetic field sweep. As expected, two minima with opposite $P_b$ are degenerate each value of $H$, at low field these are located at states 1 and 3, then as the field is ramped up they move to favor states 2 and 4.
+We see that during the sweep the barriers between the different states evolve asymmetrically.
+Starting in state 1, when the field is ramped up the barrier towards state 2 decreases faster than the one towards state 4, causing the system to move from 1 to 2.
+Then, as the magnetic field is lowered again, the barrier from 2 to 3 increases slower than from 2 to 1. When ultimately state 2 goes from being metastable to a saddle point, the system spills over towards state 3, and so on.
+In order to try and understand where the asymmetric evolution of the barriers comes from, we investigate the situation around the particular $H$-field strength where the system is close to state 2, and the barriers between state 2 and 1, and 2 and 3 are the same height.
+This situation is highlighted by the red dashed box around the blue graph in Fig.~\ref{fig:GdMn2O5_theory}(g). The inset of panel (k) provides a zoom on the energy surface. The states $12$ and $23$ denote the configurations on top of the barriers from 1 to 2 and 2 to 3, respectively. A Taylor expansion in terms of $H$, around $H^*$ can be performed for both states:
 \begin{equation}
-	F(H) = F(H^*) + \left.\frac{\partial F}{\partial H}\right\rvert_{H=H^*} (H-H^*) + ...,
+	F(H) = F(H^*) + \left.\frac{\partial F}{\partial H}\right\rvert_{H=H^*} (H-H^*) + ...
 \end{equation}
-for each of the states and subtract the result. Using $\frac{\partial F}{\partial H} = M$ we find
+If one then subtracts the results, using $\frac{\partial F}{\partial H} = M$, the following expression is found
 \begin{equation}
-	F_{\tilde{1}}(H) - F_{\tilde{2}} = (M_{\tilde{1}} - M_{\tilde{2}}) (H - H^*).
+	E_{12}(H) - E_{23} \sim (M_{12} - M_{23}) (H - H^*).
 \end{equation}
-\lp{show how to calculate M?}
-This means that to first order the evolution of the barrier asymmetry is given by the difference magnetization of the states on top of the barriers. Indeed we find that the magnetizations are different from our simulations, confirming that this is at least a part of the reason for the asymmetric evolution of the barriers. Moreover, due to the symmetry of the system, this asymmetry is opposite when the field is swept up, as compared with when the field is swept down. This causes the unidirectional movements through the four states.
+This means that, to first order, the evolution of the barrier asymmetry is given by the difference in magnetization of the two states on top of the barriers.
+The magnetization of both states can be calculated using the following formula
+\begin{equation}
+	\mathbf{M} = -\frac{\partial{F}}{\partial{\mathbf{H}}} = \sum_i g \mu_{B} \mathbf{S}_i - \sum_{\alpha} 2 \chi^{-1}\mathbf{L}_{\alpha} (\mathbf{H} \cdot \mathbf{L}_{\alpha}) 
+\end{equation}
+Indeed we find that the magnetizations are different from our simulations, $M_{23} > M_{12}$, confirming that this is at least a part of the reason for the asymmetric evolution of the barriers.
+Moreover, due to the symmetry of the system, this asymmetry is opposite when the field is swept up, as compared with when the field is swept down.
+This causes that when $H > H^*$ the barrier from state 1 to state 2 lowers faster than the one towards state 4, and by symmetry, the barrier from state 3 to state 4 lowers faster than from state 3 to 2.
+The converse is true when $H < H^*$, but since the system is then coming from the high-field configurations, it moves from 2 to 3 and 4 to 1 rather than the opposite direction.
+This causes the deterministic unidirectional movements through the four states sequentially when two field sweeps are applied.
+Since the two low field states that get accessed sequentially have two different $P_b$ values, this situation effectively results in a single crystal binary counter behavior.  
+
+This robust one directional rotation of certain order parameters allows one to assign a non-zero winding number to the `magic-angle` switching behavior, i.e. $Q=\frac{1}{2\pi}\int_0^{T_0} dt (l_x\partial_t l_y - l_y \partial_t l_x)$ 
 
 \section{Simplified Model}
 Having found a description for the situation in the complicated material GdMn$_2$O$_5$ using the model \ref{eq:GdMn2O5_1}, one may wonder what the minimal requirements are to have a similar four-state behavior where the spins rotate 360$^\circ$ while the applied field only oscillates along a single axis.
-We look to the spin configurations of Fig.~\ref{fig:theory_Gd1}(h) for inspiration. It is clear that, although necessary for the $P_b$ behavior, it seems that the chain with Mn moments most parallel to the applied field does the full rotation, while the other chain merely osciallates around its starting position. The Gd moments seem to follow the behavior of the chain they are most strongly coupled to. This warrants an attempt to explain the observed behavior using only a single chain with its Gd moments.   
-In the particular case where the magic angle is along $\alpha = +10^\circ$, we keep $L_1$, $S_2$, $S_3$, $S_6$ and $S_7$ as the variables in the model. We also assume that the easy axis of Gd is not that important.
-This leaves us with the following Hamiltonian, which we will split up in two parts, one with the dipolar terms $H_{dip}$ and one with all the other terms $H'$:
+We look to the spin configurations of Fig.~\ref{fig:theory_Gd1}(h) for inspiration. It is clear that, although necessary for the $P_b$ behavior, it seems that the chain with Mn moments most parallel to the applied field does the full rotation, while the other chain merely oscillates around its starting position. The Gd moments seem to follow the behavior of the chain they are most strongly coupled to. This warrants an attempt to search for the four state behavior using only a single chain with its Gd moments.   
+To this end, in the particular case where the magic angle is along $\alpha = +10^\circ$, we keep $L_1$, $S_2$, $S_3$, $S_6$ and $S_7$ as the variables in the model.
+We also neglect the easy axis anisotropy of the Gd ions.
+This leaves us with the following Hamiltonian, which is split up in two parts, one with the dipolar terms $H_{dip}$ and one with all the other terms $H'$:
 \begin{align}
 	H &= H' + H_{dip} \\
 	H' &= J_1(\mathbf{S}_2 + \mathbf{S}_3 - (\mathbf{S}_6 + \mathbf{S}_7))\cdot\mathbf{L}_1 - g \mu_b (\mathbf{S}_2 + \mathbf{S}_3 + \mathbf{S}_6 + \mathbf{S}_7) \cdot \mathbf{H} \\
@@ -133,7 +188,7 @@ Due to the symmetries of this model and the geometry of the material we end up w
 	\caption{\label{fig:GdMn2O5_simple_model} Simplified single chain model.}
 \end{figure}
 
-This causes $S_2 = S_3$ and $S_6 = S_7$, and thus allows us to look at a single one of the two copies. Again keep only nearest neighbor dipolar terms, and assuming no anisotropy for the Gd spins, we end up with
+This causes $S_2 = S_3$ and $S_6 = S_7$, and thus allows us to look at a single one of the two copies. Again keep only nearest neighbor dipolar terms, we end up with
 \begin{align}
 	H' &= 2J_1(\mathbf{S}_3 - \mathbf{S}_6)\cdot\mathbf{L}_1 - 2g \mu_b (\mathbf{S}_3 + \mathbf{S}_6) \cdot \mathbf{H} \\
 	&+ K_L (\mathbf{L} \cdot \mathbf{n}) \\
